--- a/trunk/FinanceiraWeb/web/legislacao.xhtml
+++ b/trunk/FinanceiraWeb/web/legislacao.xhtml
@@ -1,5 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:h="http://java.sun.com/jsf/html">
 <!-- Template Design by TheWebhub.com | http://www.thewebhub.com | Released for free under a Creative Commons Attribution-Share Alike 3.0 Philippines -->
 <head>
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
@@ -44,6 +46,8 @@
 </head>
 <body>
 
+       <f:view>
+           <f:event type="preRenderView" listener="#{pagBean.acionaLegislacao}"/>
 
       <script>
         //Coloque aqui o número de itens de menu
@@ -95,11 +99,7 @@
                         <h2>LEGISLAÇÃO</h2>
 			<div class="box1">
                                 <ul>
-					- Cessão de Direitos - <a href="http://www.geranegocio.com.br/download/geral/legis/factoring/codcivilarts1065a1078.zip">  Código Civil</a> - art. 1.065 a 1.078<br></br>
-- Compra e Venda Mercantil - <a href="http://www.geranegocio.com.br/download/geral/legis/factoring/codigocomercial.zip">  Código Comercial</a> - art. 191 a 220<br></br>
-- Código de Ética, Disciplina e Auto-Regulamentação do Factoring (ANFAC Associação Nacional das Empresas de Fomento Comercial)<br></br>
-
- 
+				   <h:outputText escape="false" value="#{pagBean.conteudo}"/>
 				</ul>
 			</div>
                         <div id="fotoservicos"></div>
@@ -110,5 +110,6 @@
 	<div id="footer">
 		<p>Copyright &copy; 2011 FINABAN. Developed by <a href="http://www.thewebhub.com/">  thewebhub</a> and custom by TecnoPigs Ltda.</p>
 	</div>
+</f:view>
 </body>
 </html>
