--- a/trunk/FinanceiraWeb/web/pagadministrador.xhtml
+++ b/trunk/FinanceiraWeb/web/pagadministrador.xhtml
@@ -1,8 +1,10 @@
+<?xml version="1.0" encoding="ISO-8859-1"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:p="http://primefaces.prime.com.tr/ui"
-      xmlns:f="http://java.sun.com/jsf/core">
+      xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:ui="http://java.sun.com/jsf/facelets">
 <!-- Template Design by TheWebhub.com | http://www.thewebhub.com | Released for free under a Creative Commons Attribution-Share Alike 3.0 Philippines -->
 <h:head>
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
@@ -63,6 +65,7 @@
 
 </div>
  <div id="subbody">
+        
             <div id="box2colunas">
                 <div id ="colunaA">
                     <ul id="menu">
@@ -72,19 +75,19 @@
                         <div class="titulo_menu"  ><a href="javascript:void(escondediv('1',n_divs))" class="link_menu" >O FACTORING</a></div>
                         <div id="mdiv1"  style="display:none">
                         <ul>
-                        <li><td class="itens_menu"><a href="#" class="link_menu">Introdução</a></td></li>
-                        <li><td class="itens_menu" ><a href="#" class="link_menu">Gestão</a></td></li>
-                        <li><td class="itens_menu"><a href="#" class="link_menu">Antecipação</a></td></li>
+                        <li><td class="itens_menu"><a href="#" class="link_menu">Introdu&#231;&#227;o</a></td></li>
+                        <li><td class="itens_menu" ><a href="#" class="link_menu">Gest&#227;o</a></td></li>
+                        <li><td class="itens_menu"><a href="#" class="link_menu">Antecipa&#231;&#227;o</a></td></li>
                         <li><td class="itens_menu"><a href="#" class="link_menu">Custos</a></td></li>
                         </ul>
                         </div>
-                        <div class="titulo_menu"  ><a href="legislacao.xhtml" class="link_menu" >LEGISLAÇÃO</a></div>
+                        <div class="titulo_menu"  ><a href="legislacao.xhtml" class="link_menu" >LEGISLA&#199;&#195;O</a></div>
                         <div class="titulo_menu"  ><a href="javascript:void(escondediv('2',n_divs))" class="link_menu" >PRODUTOS</a></div>
                         <div id="mdiv2"  style="display:none">
                         <ul>
                         <li><td class="itens_menu"><a href="prosabendo.xhtml" class="link_menu">Pro-solvendo</a></td></li>
-                        <li><td class="itens_menu" ><a href="prosolutocom.xhtml" class="link_menu">Pro-soluto com notificação</a></td></li>
-                        <li><td class="itens_menu"><a href="prosolutosem.xhtml" class="link_menu">Pro-soluto sem notificação</a></td></li>
+                        <li><td class="itens_menu" ><a href="prosolutocom.xhtml" class="link_menu">Pro-soluto com notifica&#231;&#227;o</a></td></li>
+                        <li><td class="itens_menu"><a href="prosolutosem.xhtml" class="link_menu">Pro-soluto sem notifica&#231;&#227;o</a></td></li>
                         <li><td class="itens_menu" ><a href="maturity.xhtml" class="link_menu">Maturity Factoring</a></td></li>
                         <li><td class="itens_menu"><a href="importexport.xhtml" class="link_menu">Import - Export</a></td></li>
                         </ul>
@@ -95,12 +98,12 @@
                     </ul>
                 </div>
                 <div id ="colunaB">
-                    <h2>PÁGINA DO ADMINISTRADOR</h2><div id="textoLogin"><h:outputLabel value="Olá, #{userBean.nome}"/></div>
+                    <h2>P&#193;GINA DO ADMINISTRADOR</h2><div id="textoLogin"><h:outputLabel value="Ol&#225;, #{userBean.nome}"/></div>
                         <f:view>
                                <h:body>
                                         <h:form>
 
-                                            <h3> Criar Usuário:</h3>
+                                            <h3> Criar Usu&#225;rio</h3>
                                             <div id="campos">
                                             <br></br>
                                             <div id="texto"> <h:outputLabel value="Nome:"/>
@@ -118,7 +121,7 @@
                                             <div id="radio">
                                             <h:selectOneRadio value="#{newUserBean.nivelAcesso}">
                                                     <f:selectItem itemValue="0" itemLabel="0 - Usuario Comum" />
-                                                    <f:selectItem itemValue="1" itemLabel="1 - Usuário Administrador" />
+                                                    <f:selectItem itemValue="1" itemLabel="1 - Usu&#225;rio Administrador" />
                                             </h:selectOneRadio></div>
                                             <br></br>
                                             <br></br>
@@ -139,21 +142,22 @@
                                             <div id="textoErroNovo">
                                                 <h:outputLabel value="#{newUserBean.erro}"/>
                                             </div>
-                                            <h3> Editar Campos das Páginas:</h3>
+                                            <h3> Editar Campos das P&#225;ginas</h3>
+                                             <br></br>Escolha a p&#225;gina:
                                             <h:selectOneRadio value="#{pagBean.nome}">
                                                     <f:selectItem itemValue="home" itemLabel="Home" />
                                                     <f:selectItem itemValue="faleconosco" itemLabel="Fale Conosco" />
-                                                    <f:selectItem itemValue="prosolvendo" itemLabel="Pró-Solvendo" />
+                                                    <f:selectItem itemValue="prosolvendo" itemLabel="Pr&#243;-Solvendo" />
+                                                    <f:selectItem itemValue="importexport" itemLabel="Importa&#231;&#227;o-Exporta&#231;&#227;o" />
+                                                    <f:selectItem itemValue="legislacao" itemLabel="Legisla&#231;&#227;o" />
+                                                    <f:selectItem itemValue="maturity" itemLabel="Maturity"/>
+                                                    <f:selectItem itemValue="prosolutocom" itemLabel="Pro-Soluto com Notifica&#231;&#227;o"/>
+                                                    <f:selectItem itemValue="prosolutosem" itemLabel="Pro-Soluto sem Notifica&#231;&#227;o"/>
                                             </h:selectOneRadio>
                                             <br></br><br></br>
                                             <div id="areaTexto">
-                                            <p:editor value="#{pagBean.conteudo}" widgetVar="editor" width="600"/>
-
-                                            <h:panelGrid columns="2" style="margin-top:10px">
-                                                <h:commandButton value="Carrega" action="#{pagBean.checaPagina}"></h:commandButton>
-                                                <h:commandButton value="Salva" action="#{pagBean.salvaPagina}"></h:commandButton>
-                                            </h:panelGrid>
-                                                </div>
+                                                <ui:include src="editor.xhtml"></ui:include>
+                                             </div>
                                         </h:form>
                                 </h:body>
                              </f:view>
