--- a/trunk/FinanceiraWeb/web/contatenos.xhtml
+++ b/trunk/FinanceiraWeb/web/contatenos.xhtml
@@ -103,6 +103,9 @@
 					<h:outputText escape="false" value="#{pagBean.conteudo}"/>
 				</ul>
 			</div>
+                        <div class="box1">
+                            
+                        </div>
                         <div id="foto"></div>
                     </div>
                 </div>
