--- a/trunk/FinanceiraWeb/web/home.xhtml
+++ b/trunk/FinanceiraWeb/web/home.xhtml
@@ -1,5 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:h="http://java.sun.com/jsf/html">
 <!-- Template Design by TheWebhub.com | http://www.thewebhub.com | Released for free under a Creative Commons Attribution-Share Alike 3.0 Philippines -->
 <head>
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
@@ -43,7 +45,8 @@
 
 </head>
 <body>
-
+    <f:view>
+        <f:event type="preRenderView" listener="#{pagBean.acionaQuemSomos}"/>
       <script>
         //Coloque aqui o número de itens de menu
         n_divs='5'
@@ -92,24 +95,8 @@
                         <h2>SOCIEDADE</h2>
 			<div class="box1">
                                 <ul>
-					<li>
-                                            Finaban é uma empresa do grupo Erin que opera no ramo do factoring. Sua peculiaridade é a atenção para os multíplices aspectos da realidade empresarial, que se manifesta através da prestação de serviços diversificados e flexíveis.
-
-Para Finaban isso significa disponibilizar para os clientes um conjunto de produtos altamente personalizados, capazes de responder às exigências especificas de cada empresa.
- </li><br></br>
-<li>&raquo;&nbsp;<strong>Finaban Sociedade de Fomento Mercantil Ltda</strong> </li>                                       
-<pre><font face="verdana"> - Sede legal e administrativa
-   Rua Carlos Sampaio 351, Centro, Rio de Janeiro
-   Tel.
-
-- Sede de atendimento
-  Rua Santa Clara 105, Copacabana, Rio de Janeiro
-
-- CNPJ
-
-- Membro do Sinfac e Anfac numero
-
-- Sociedade do Grupo Erin </font></pre>
+					
+                                    <h:outputText escape="false" value="#{pagBean.conteudo}"/>
 
  <div id ="fotoFinaban"></div>
                                         
@@ -122,6 +109,7 @@ Para Finaban isso significa disponibilizar para os clientes um conjunto de produ
 	<div id="footer">
 		<p>Copyright &copy; 2011 FINABAN. Developed by <a href="http://www.thewebhub.com/">  thewebhub</a> and custom by TecnoPigs Ltda.</p>
 	</div>
+        </f:view>
 </body>
 </html>
 
