--- a/trunk/FinanceiraWeb/web/contatenos.xhtml
+++ b/trunk/FinanceiraWeb/web/contatenos.xhtml
@@ -1,9 +1,10 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:f="http://java.sun.com/jsf/core">
+      xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:ui="http://java.sun.com/jsf/facelets">
 <!-- Template Design by TheWebhub.com | http://www.thewebhub.com | Released for free under a Creative Commons Attribution-Share Alike 3.0 Philippines -->
-<head>
+<h:head>
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 <title>FINABAN: Fale Conosco</title>
 <meta name="keywords" content="" />
@@ -44,7 +45,7 @@
         //]]>
 	</script> 
 
-</head>
+</h:head>
 <body>
     <f:view>
         <f:event type="preRenderView" listener="#{pagBean.acionaFaleConosco}"/>
@@ -103,7 +104,10 @@
 					<h:outputText escape="false" value="#{pagBean.conteudo}"/>
 				</ul>
 			</div>
-                        <div id="foto"></div>
+                        <div id="areaTextoMail">
+                        <ui:include src="envioMail.xhtml"></ui:include>
+                        </div>
+                        
                     </div>
                 </div>
         </div>
