--- a/trunk/FinanceiraWeb/web/pagadministrador.xhtml
+++ b/trunk/FinanceiraWeb/web/pagadministrador.xhtml
@@ -143,7 +143,7 @@
                                             <h3> Editar Campos das P&#225;ginas</h3>
                                              <br></br>Escolha a p&#225;gina:
                                             <h:selectOneRadio value="#{pagBean.nome}">
-                                                    <f:selectItem itemValue="home" itemLabel="Home" />
+                                                    <f:selectItem itemValue="quemsomos" itemLabel="Home" />
                                                     <f:selectItem itemValue="faleconosco" itemLabel="Fale Conosco" />
                                                     <f:selectItem itemValue="prosolvendo" itemLabel="Pr&#243;-Solvendo" />
                                                     <f:selectItem itemValue="importexport" itemLabel="Importa&#231;&#227;o-Exporta&#231;&#227;o" />
