--- a/trunk/FinanceiraWeb/web/importexport.xhtml
+++ b/trunk/FinanceiraWeb/web/importexport.xhtml
@@ -98,7 +98,7 @@
                 <div id ="colunaB">
                         <h2>IMPORTAÇÃO - EXPORTAÇÃO:</h2>
 			        <h:outputText escape="false" value="#{pagBean.conteudo}"/>
-			<div id="fotoservicos"></div>
+			<div id="fotoimport"></div>
                     </div>
                 </div>
         </div>
