--- a/trunk/FinanceiraWeb/web/prosolutocom.xhtml
+++ b/trunk/FinanceiraWeb/web/prosolutocom.xhtml
@@ -98,7 +98,7 @@
                 <div id ="colunaB">
                         <h2>PRO-SOLUTO COM NOTIFICAÇÃO</h2>
 			        <h:outputText escape="false" value="#{pagBean.conteudo}"/>
-			<div id="fotoservicos"></div>
+			<div id="fotodinheiro"></div>
                     </div>
                 </div>
         </div>
