--- a/trunk/FinanceiraWeb/web/prosolutosem.xhtml
+++ b/trunk/FinanceiraWeb/web/prosolutosem.xhtml
@@ -99,7 +99,7 @@
                         <h2>PRO-SOLUTO SEM NOTIFICAÇÃO:</h2>
 			        <h:outputText escape="false" value="#{pagBean.conteudo}"/>
 				
-                        <div id="fotoservicos"></div>
+                        <div id="fotodinheiro"></div>
                     </div>
                 </div>
         </div>
